# fws

./: .gitignore  Dockerfile  FireWallSynthesizer.cabal  LICENSE  Makefile  README.md  fws  setup.py  update_libs.sh
emacs/: README.md  fws.el
examples/: check_equivalence.sh  diff.fws  equivalence.fws  examples.fws  layer2.fws  module_example.py  nondeterminism.fws  real_world.fws  real_world.sh  run_examples.sh
examples/itasec18/: interfaces  iptables.txt  iptables_correct_update.txt  iptables_wrong_update_1.txt  iptables_wrong_update_2.txt  maintenance.sh  verification.sh
examples/policies/: cisco.txt  cisco_aliases.conf  interfaces  interfaces_aliases.conf  ipfw.sh  iptables.rules  iptables_macaddress.rules  pf.conf
examples/policies-update/: ipfw.sh  iptables_new_rule.rules  iptables_new_rule_correct.rules  iptables_nondet.rules
examples/real-world/: README.org
examples/real-world/blog_a-unikernel-firewall-for-qubesos/: info  interfaces  ip_addr  iptables-save
examples/real-world/chair_for_Network_Architectures_and_Services/: info  interfaces  iptables-save-mac  randomize_MACs.py
examples/real-world/cisco_forum_nat/: cisco1.txt  info  interfaces
examples/real-world/eduroam_laptop/: info  interfaces  iptables-save
examples/real-world/github_myiptables/: interfaces
examples/real-world/home-router-openwrt-lede/: interfaces  router.rules
examples/real-world/kornwall/: interfaces  iptables-save
examples/real-world/medium-sized-company/: interfaces  iptables-save.iptables_mainfw_31.01.2016
examples/real-world/memphis_testbed/: interfaces
examples/real-world/random_srv/: interfaces
examples/real-world/sqrl_shorewall/: 2015_aug_iptables-save  info  interfaces
examples/real-world/ticket_openwrt/: interfaces  iptables-save-AA.txt  src
examples/real-world/veroneau.net/: interfaces
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: contenteditable.vue
fwsynthesizer/: __init__.py
fwsynthesizer/compile/: __init__.py  compile_ipfw.py  compile_iptables.py  compile_pf.py  compile_utils.py
fwsynthesizer/diagrams/: cisco.diagram  ipfw.diagram  iptables.diagram  pf.diagram  simple.diagram
fwsynthesizer/frontends/: __init__.py  cisco.py  ipfw.py  iptables.py  pf.py
fwsynthesizer/parsers/: parse_cisco.py  parse_ipfw.py  parse_iptables.py  parse_pf.py  utils.py
fwsynthesizer/synthesis/: __init__.py  query.py  table_printer.py
fwsynthesizer/utils/: __init__.py  macaddr.py  table.py
fwsynthesizer/web/: __init__.py
lib/HaPy-haskell/: HaPy.cabal
lib/HaPy-haskell/Foreign/: HaPy.hs
lib/HaPy-haskell/Foreign/HaPy/: Internal.hs
lib/HaPy-python/: HaPy.py
lib/z3-haskell/: z3.cabal
lib/z3-haskell/src/Z3/: Base.hs  Monad.hs  Opts.hs
lib/z3-haskell/src/Z3/Base/: C.hsc
src/: Export.hs  FWS.hs
src/FWS/: BVPredicates.hs  BVSat.hs  Parsers.hs  Types.hs  Utils.hs
