
name:                FireWallSynthesizer
version:             1.0.0.0
synopsis:            Language-independent Synthesis of Firewall Policies

license:             MIT
license-file:        LICENSE

maintainer:          Lorenzo Veronese <852058 at stud.unive.it>
copyright:           (c) 2017 Chiara Bodei <chiara at di.unipi.it>
                     (c) 2017 Pierpaolo Degano <degano at di.unipi.it>
                     (c) 2017 Riccardo Focardi <focardi at unive.it>
                     (c) 2017 Letterio Galletta <galletta at di.unipi.it>
                     (c) 2017 Mauro Tempesta <tempesta at unive.it>
                     (c) 2017 Lorenzo Veronese <852058 at stud.unive.it>

build-type:          Simple

cabal-version:       >=1.10

Library
  hs-source-dirs:      src

  exposed-modules:     FWS, Export
  other-modules:       FWS.BVSat, FWS.BVPredicates, FWS.Parsers, FWS.Types, FWS.Utils
  other-extensions:    ForeignFunctionInterface, TemplateHaskell

  ghc-options:         -O2 -dynamic

  build-depends:         base >= 4.8
                       , containers >= 0.5.6.2
                       , mtl >= 2.2.1
                       , parsec >= 3.1.11
                       , z3 == 4.1.7
                       , HaPy == 0.1.7

  default-language:    Haskell2010

  extra-lib-dirs: /usr/lib/ghc-8.0.2/rts, /usr/lib/ghc/rts
  extra-libraries: HSrts-ghc8.0.2, HSbase-4.9.1.0-ghc8.0.2
